# michal_chruszczewski_repo

./: .gitignore  README.md
.ipynb_checkpoints/: Player-checkpoint.py  Untitled-checkpoint.ipynb
DocumentChat/: TextProcessors.py  test.ipynb  test.py
DocumentChat/Llama_3.1/: tokenizer.py  vectorstore.py  wrapper.py
DocumentChat/flagged/: log.csv
Praca dyplomowa/: DataSource.py  Plan pracy- Michał Chruszczewski.docx  Player.py  PracaDyplomowa.docx  README.md  Temat.docx  Untitled.ipynb  player_names_dict.json  pyproject.toml  test.csv  ~$acaDyplomowa.docx  ~$an pracy- Michał Chruszczewski.docx
Praca dyplomowa/Archive/: Player.py
Praca dyplomowa/Praca dyplomowa/Code/: 1. EDA notebook.ipynb  2. Creating models.ipynb  DataScrapping.py  ModelClasses.py
Praca dyplomowa/Praca dyplomowa/Data/: club_ids.xlsx  fbref_db.xlsx
Python case/: Data_Science_Recruitment_Excercise_(without_answers).ipynb
Python case/data/: atm_daily_data.csv
R- case study/: .RData  .Rhistory  Case.R  PredMaint.csv
Zadanie python/: DataSource.py  Data_manipulation_functions.py  Data_sourcing_scripts.py  Untitled.ipynb  Zadanie python.ipynb  drafts.ipynb  install_packages.py  models.py  raport.ipynb  raportt.html
Zadanie python/Data/Input/England/: main_players_df.csv  main_players_df_check.csv  stats_df.csv  transfers_df.csv
Zadanie python/Data/Input/France/: main_players_df.csv  (+2 more)
Zadanie_R/: .Rhistory  0. Wrapper.R  1. Data_profiling.R  3. Models.R  4. Test_set_script.R
Zadanie_R/data/input/: test_student.csv  train_student.csv
Zadanie_R/data/output/: 83539_Chruszczewski.csv
(+33 files in other folders)
