[tool.poetry]
name = "praca dyplomowa"
version = "0.1.0"
description = ""
authors = ["Michal Chruszczewski <mi.chruszczewski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^2.0.1"
scikit-learn = "^1.5.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
